<resources>
    <string name="app_name">daktarkhana</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_no">Phone No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="have_account">Have Account</string>
    <string name="pat">Patients</string>
</resources>
